syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "Backend/pb";

message targetlist {
    int32 UserID = 1;
    int32 Target1ID = 2;
    int32 Target2ID = 3;
    int32 Target3ID = 4;
    google.protobuf.Timestamp UpdatedAt = 5;
}